--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "producer": "node ./producer/index.js",
+    "producer": "nodemon ./producer/index.js",
     "consumer": "node ./consumer/index.js"
   },
   "keywords": [],
@@ -13,8 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "avsc": "^5.7.6",
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "node-rdkafka": "^2.14.0"
+    "node-rdkafka": "^2.14.0",
+    "postgres": "^3.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
