--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "node-rdkafka": "^2.14.0",
-    "postgres": "^3.3.1"
+    "fs": "^0.0.1-security",
+    "node-rdkafka": "^2.14.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
